Added OrderStateTracker implemented with witheboard pattern, changed groovy templates to support isNew and version
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@931 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
@@ -234,7 +234,7 @@
                 <mx:DataGridColumn headerText="Width" dataField="width" width="50"/>
                 <mx:DataGridColumn headerText="Height" dataField="height" width="50"/>
                 <mx:DataGridColumn headerText="Weight Tare" dataField="weightTare" width="50"/>
-                <mx:DataGridColumn headerText="Maxmial Weight" dataField="weightMax" width="50"/>
+                <mx:DataGridColumn headerText="Maximal Weight" dataField="weightMax" width="50"/>
                 <mx:DataGridColumn headerText="Description" dataField="description"/>
             </mx:columns>
         </mx:DataGrid>
