Refactored state classes
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@941 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -34,7 +34,7 @@
 	<mx:Script>
     	<![CDATA[
     		import mx.controls.dataGridClasses.DataGridColumn;
-    		import org.openwms.common.domain.TransportUnit$TU_STATE;
+    		import org.openwms.common.domain.values.TransportUnitState;
     		import mx.messaging.channels.StreamingAMFChannel;
     		import mx.events.ListEvent;
     		import flash.events.MouseEvent;
@@ -177,7 +177,7 @@
             <mx:Text text="{selected.barcode}" width="100%" fontWeight="bold"  x="148" y="10"/>
 
 			<mx:Label text="State" fontWeight="normal" width="130" textAlign="right" x="10" y="36"/>
-            <mx:ComboBox x="148" y="34" dataProvider="{TransportUnit$TU_STATE.constants}" selectedIndex="{new ArrayCollection(TransportUnit$TU_STATE.constants).getItemIndex(selected.transportUnitType)}"/>
+            <mx:ComboBox x="148" y="34" dataProvider="{TransportUnitState.constants}" selectedIndex="{new ArrayCollection(TransportUnitState.constants).getItemIndex(selected.transportUnitType)}"/>
 
 			<mx:Label text="Actual Location" fontWeight="normal" width="130" textAlign="right" x="10" y="62"/>
             <mx:ComboBox x="148" y="60" />
